[package]
name = "truco_server"
version = "0.1.0"
edition = "2021"

[dependencies]
#truco_domain_engine = { git = "https://github.com/Mirkopoj/truco_state_pattern.git" }
truco_domain_engine = { path = "../truco_domain_engine" }
tokio = { version = "1.34.0", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
